...
                            if (it) {
                                if (task.minuteOfDay == null) 1440 else 60
                            } else null
                    )
                )
            },
            modifier = Modifier.testTag("duration-enabled"),
        )
    }
    if (end != null) {
        val displayedDay =
            if (task.minuteOfDay == null) end.toLocalDate().minusDays(1) else end.toLocalDate()
        Text(
...
